--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "scraft",
-    "version": "2.2.0",
-    "description": "React library for JSON configured apps.",
+    "version": "3.0.0",
+    "description": "Utility for transforming JSON into React Component Props",
     "main": "lib/index.js",
     "scripts": {
         "start": "react-scripts start",
@@ -15,7 +15,8 @@
     "keywords": [
         "JSON",
         "React",
-        "Builder"
+        "React Hooks",
+        "Interpolator"
     ],
     "author": "Daryan Sankar",
     "license": "MIT",
@@ -25,17 +26,14 @@
     "homepage": "https://github.com/dsankar1/scraft#readme",
     "browserslist": "> 0.25%, not dead",
     "dependencies": {
-        "react-grid-layout": "0.16.6",
-        "react-helmet": "^5.2.1",
-        "react-router-dom": "^5.0.1",
-        "yup": "^0.27.0"
+        "lodash": "^4.17.15",
+        "react-redux": "^7.1.3",
+        "redux": "^4.0.5"
     },
     "devDependencies": {
         "@babel/cli": "^7.5.5",
         "@babel/core": "^7.5.5",
         "@babel/preset-react": "^7.0.0",
-        "eslint-config-prettier": "^6.0.0",
-        "eslint-plugin-prettier": "^3.1.0",
         "prettier": "^1.18.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
